Style fix - label margin too large on search results boolean filters

--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -240,6 +240,10 @@
   .boolean-filter-container {
     margin-left: 10px;
     padding-top: 10px;
+
+    label {
+      margin-top: 10px;
+    }
   }
 
   .tm-checkbox {
